--- a/Instagram Backend API/index.html
+++ b/Instagram Backend API/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="prism.css">
-    <title>Postman Clone</title>
+    <title>Instagram Backend API</title>
     <style>
         #responsepre{
             max-height: 500px;
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
         <div class="mx-auto">
-            <h3 class="navbar-brand mx-auto">POSTMAN CLONE</h3>
+            <h3 class="navbar-brand mx-auto">Instagram Backend API</h3>
         </div>
     </nav>
 
